--- a/MyProject.html
+++ b/MyProject.html
@@ -202,10 +202,10 @@
             <div class="img"><img src="proj1.jpg.png" alt=""></div>
             <div class="des">
                 <p style="font-weight: 900;"><span>Languages Used:  </span>HTML , CSS and JavaScript</p>
-                <p>This is my first project reagrding Tour and travels segment . While initiating this project
-                    , I have only basic knowledge of HTML and CSS and a little javascript . In this project , i've made countless 
-                    correction regarding postions , margins and etc . This is the most time taking project to build-in but also 
-                    helpful to  concrete the basic concepts.
+                <p>This is my first project in the Tours and Travels category. While initiating this project, I had only basic 
+                    knowledge of HTML, CSS, and a little Javascript. In this project, I've made countless corrections regarding 
+                    positions, margins, etc. This is the most time-consuming project to build, but it is also helpful to concrete
+                     my basic concepts.
                     <span>VISIT LINK IS GIVEN BELOW </span>   
                 </p>
             </div>   
@@ -215,9 +215,9 @@
             <div class="img"><img src="proj2.png" alt=""></div>
             <div class="des">
                 <p style="font-weight: 900;"><span>Languages Used:  </span>HTML , CSS and JavaScript</p>
-                <p>This is my second project on the topic of hotel and resturant profile. In this project , some functional image gallery
-                    with beautiful body slides along with simple footer is built by me . This project contains an amazing color 
-                    combination which makes it more dramatic and beautiful.
+                <p>This is my second project on the topic of hotel and restaurant profiles. In this project, I've created some functional image galleries,
+                    with beautiful body slides and a simple footer. This project contains an amazing amount of color.
+                    This combination adds drama and beauty to the piece.
                     <span>VISIT LINK IS GIVEN BELOW </span>   
                 </p>
             </div>   
@@ -227,9 +227,9 @@
             <div class="img"><img src="proj3.png" alt=""></div>
             <div class="des">
                 <p style="font-weight: 900;"><span>Languages Used:   </span>HTML , CSS and JavaScript</p>
-                <p>This is my third project on the topic of real estate and properties or regarding construction ,
-                    which contains two types of image slider, one is fully animated or autocontrolled and another is automatic along
-                    with manual controls (dot-type-button). This project also have a beautiful image gallery .
+                <p>This is my third project on the topic of real estate and properties, or regarding construction.
+                    which contains two types of image sliders; one is fully animated or autocontrolled, and another is automatic along
+                    with manual controls (dot-type-button). This project also has a beautiful image gallery.
                     <span>VISIT LINK IS GIVEN BELOW </span>   
                 </p>
             </div>   
@@ -239,8 +239,8 @@
             <div class="img"><img src="proj4.png" alt=""></div>
             <div class="des">
                 <p style="font-weight: 900;"><span>Languages Used:  </span>HTML , CSS and JavaScript</p>
-                <p>It is one of my most advanced project insipire from <span>SONY.com</span> contains a very beautiful and 
-                    advance dropdown navbar . Visit this site to see more graphics mention in this site . 
+                <p>It is one of my most advanced project, inspired by <span>SONY.com</span>, and contains a very beautiful and
+                    advance dropdown navbar. Visit this site to see more graphics.
                     <span>VISIT LINK IS GIVEN BELOW</span> 
                 </p>
             </div>   
