--- a/about.html
+++ b/about.html
@@ -200,20 +200,20 @@
         <div class="img"><img src="profile3.jpg" alt=""></div>
         <div class="text"><div class="start">
             <h3>STARTING WITH</h3>
-            <p>Basic HTML, CSS , and Javascript ; I decided to continue my career with web development.
-                I am in road to become a <span>FULL STACK DEVELOPER</span> whereas I am already aquired my certificate 
-                in <span>FRONT END DEVELOPMENT</span> which is also responsible to make me skill full; so that I am able to make 
-                my profile with zero difficulties by just using scratch
+            <p>Basic HTML, CSS , and Javascript ; I've decided to pursue a career in web development. 
+                I am on my way to becoming a <span>FULL STACK DEVELOPER</span> , having already obtained my certificate in FRONT END DEVELOPMENT,
+                 which is also responsible for making me skillful; from which I created my profile with no difficulty by simply
+                  starting from scratch. 
             </p>
         </div>
         <div class="wagtail">
             <h3>WAGTAIL</h3>
-            <p>Right now , I am in practise of <span>WAGTAIL</span> which is an open source content management system.
-            Being a developer , I don't believe in to build the stuffs from drag and drop operation. But as per the advancment 
-                of time , it is important to step forward with respect to technology . For small changes regarding announcements ,
-                images , blogs and etc one cannot prefer a developer everytime ; here a content manager plays a vital role in this
-                sceneraio . <span>WAGTAIL</span> helps to take these type of small modifications in existing project without stucking
-                in document object model and code .
+            <p>Right now, I am practising with <span>WAGTAIL</span> , which is an open-source content management system.
+                Being a developer, I don't believe in building stuff from drag-and-drop operations. But as per the advancement
+                It is critical to advance in terms of technology over time. For small changes regarding announcements,
+                One cannot always choose a developer for images, blogs, and so on; in this case, a content manager is essential.
+                <span>WAGTAIL</span>  helps to take these types of small modifications in an existing project without getting stuck
+                in the document's object model and code.
         </p>
         </div>
         <div class="js">
