text repitition error

--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
         <div class="js">
             <h3>JAVASCRIPT LIBRARIES</h3>
             <p><span>JAVASCRIPT</span> which is a scriptive language plays an imporatant role to build functions animations, actions 
-            or in other words , advances the the UI of the website .
+            or in other words , advances the UI of the website .
             <h4>JQuery</h4>
             <br>
             But function or object code of the <span>JAVASCRIPT</span> are lengthy and time requiring to write , here 
